# crawl

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
admin_site/: manage.py
admin_site/admin_site/: settings.py  urls.py  wsgi.py
admin_site/monitor/: admin.py  apps.py  models.py
config/: surfaces.json
src/: config.py  embedder.py  embeddings.py  main.py  pipeline.py  scheduler.py
src/collectors/: base.py  biorxiv.py  clinicaltrials.py  core.py  crossref.py  doaj.py  europepmc.py  hackernews.py  html_crawl.py  newsapi.py  openalex.py  pubmed.py  reddit.py  rss.py  semanticscholar.py  wikipedia.py  youtube.py
src/http/: client.py  human.py  jitter.py
src/storage/: db.py  models.py
src/storage/migrations/: env.py
src/storage/migrations/versions/: 0001_initial.py
